feat(Users): generate dummy endpoints
