# src/common/enums/user-type.enum.ts
@@ -1,0 +1,5 @@
+export enum UserType {
+  ADMIN = 'ADMIN',
+  SHOP_OWNER = 'SHOP_OWNER',
+  CUSTOMER = 'CUSTOMER',
+}
